[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/TrackSelect.gd" type="Script" id=1]
[ext_resource path="res://scenes/BearCursor.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/Orbitron/static/Orbitron-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/Orbitron/static/Orbitron-Medium.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 4 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="BearCursor2" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 250.256, 113.96 )
scale = Vector2( 0.5, 0.5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.323517
margin_top = 0.647064
margin_right = -0.323517
margin_bottom = 0.647064
color = Color( 0, 0, 0, 1 )

[node name="BearCursor" parent="." instance=ExtResource( 2 )]
position = Vector2( 250.256, 95.9599 )
scale = Vector2( 0.5, 0.5 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_top = 34.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "TRACK SELECT"
align = 1

[node name="Track1" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -44.0
margin_right = -58.0
margin_bottom = -30.0
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Exit")
mouse_filter = 0
custom_fonts/font = SubResource( 2 )
text = "TRACK 1"
align = 1
valign = 1

[node name="Track2" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -25.0
margin_right = -59.0
margin_bottom = -11.0
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Exit")
mouse_filter = 0
custom_fonts/font = SubResource( 2 )
text = "TRACK 2"
align = 1
valign = 1

[node name="Back" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -6.0
margin_right = -41.0
margin_bottom = 8.0
focus_neighbour_top = NodePath("../Start")
focus_neighbour_bottom = NodePath("../Start")
mouse_filter = 0
custom_fonts/font = SubResource( 3 )
text = "BACK"
align = 1
[connection signal="focus_entered" from="Track1" to="." method="_on_Start_focus_entered"]
[connection signal="focus_exited" from="Track1" to="." method="_on_Start_focus_exited"]
[connection signal="gui_input" from="Track1" to="." method="_on_Start_gui_input"]
[connection signal="mouse_entered" from="Track1" to="." method="_on_Start_mouse_entered"]
[connection signal="mouse_exited" from="Track1" to="." method="_on_Start_mouse_exited"]
[connection signal="gui_input" from="Track2" to="." method="_on_Tutorial_gui_input"]
[connection signal="mouse_entered" from="Track2" to="." method="_on_Tutorial_mouse_entered"]
[connection signal="mouse_exited" from="Track2" to="." method="_on_Tutorial_mouse_exited"]
[connection signal="focus_entered" from="Back" to="." method="_on_Exit_focus_entered"]
[connection signal="focus_exited" from="Back" to="." method="_on_Exit_focus_exited"]
[connection signal="gui_input" from="Back" to="." method="_on_Exit_gui_input"]
[connection signal="mouse_entered" from="Back" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="Back" to="." method="_on_Exit_mouse_exited"]
